<resources>
    <string name="app_name">FeelBetter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="memories">Memories</string>
    <string name="inspiring">Inspiring</string>
    <string name="inspiring_title_1">اجازه ندهید!!!</string>
    <string name="inspiring_title_4">خواستن توانستن است!</string>
    <string name="inspiring_title_2">کوتاه نیایید!!!</string>
    <string name="inspiring_title_3">پافشاری</string>
    <string name="inspiring_desc_1">اجازه ندهید دیگران به حد و مرزای شما بی احترامی کنند.</string>
    <string name="inspiring_desc_2">از ارزشهای خود کوتاه نیایید.</string>
    <string name="inspiring_desc_3">روی باورهایتان پافشاری کنید</string>
    <string name="inspiring_desc_4">من میخواهم پس میتوانم</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="loginEmail">loginEmail</string>
    <string name="loginPassword">loginPassword</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="forget_password">Forgot password?</string>
    <string name="title_forget_password">FORGOT?</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="forget_password_title_description">Enter your e-mail address we\'ll send you an email to reset your password</string>
    <string name="email_sent_success">Email sent successfully to reset your password</string>
    <string name="userIcon">userIcon</string>
    <string name="lockicon">lockIcon</string>
    <string name="calendericon">calenderIcon</string>
    <string name="emailicon">emailIcon</string>
    <string name="signupDate">yyyy-mm-dd</string>
    <string name="FBlogo">logo</string>


    <string name="err_msg_enter_first_name">"Please enter your first name. "</string>
    <string name="err_msg_enter_last_name">"Please enter your last name. "</string>
    <string name="err_msg_enter_new_email">"Please enter an e-mail address. "</string>
    <string name="err_msg_enter_new_password">"Please enter a password. "</string>
    <string name="err_msg_enter_date">"Please enter your birthday. "</string>
    <string name="err_msg_date_format">"Date entered does not have a correct format "</string>
    <string name="msg_register_successful">"You are registered successfully"</string>
    <string name="signupName">signupName</string>
    <string name="birthday">Button</string>
    <string name="enter_your_birthday">enter your birthday</string>
    <string name="tasks">tasks</string>
    <string name="add_new_task">add new task</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <!--    profile-->
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Username</string>
    <string name="email">Email</string>

    <!--    create task-->
    <string name="create_task_title">Create Task</string>
    <string name="create">Create</string>
    <string name="task_description">Task Description</string>
    <string name="due_time">Due time</string>
    <string name="start_time">Start Time</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="no_task_available">No Task Available</string>
</resources>
