<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/template2"
    tools:context=".activities.ForgetPasswordActivity">


    <com.example.feelbetter.utils.MSPTextViewBold
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="232dp"
        android:text="@string/title_forget_password"
        android:textSize="@dimen/forget_password_title_text_size"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_logo_bc"
        android:layout_width="93dp"
        android:layout_height="92dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="212dp"

        android:background="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="88dp"
        android:layout_height="89dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="212dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_2021_11_08_22_16_45" />

    <com.example.feelbetter.utils.MSPTextView
        android:id="@id/tv_title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/forget_password_title_description"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.feelbetter.utils.MSPEditText
        android:id="@+id/til_email"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:paddingStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_description"
        tools:ignore="MissingConstraints" />

    <com.example.feelbetter.utils.MSPButton
        android:id="@+id/btn_submit"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_width="182dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/btn_lbl_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="6dp"
        android:padding="3dp"


        android:src="@drawable/email2"
        app:layout_constraintStart_toStartOf="@id/til_email"
        app:layout_constraintTop_toTopOf="@id/til_email"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>